--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 remote_theme: yaoyao-liu/minimal-light
 
 # Basic Information 
-title: Sisi Peng
+title: Sisi Peng, MPH MS
 position: Ph.D. Candidate
 affiliation: UCLA
 email: s.peng@ucla.edu
