--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ remote_theme: yaoyao-liu/minimal-light
 
 # Basic Information 
 title: Sisi Peng, MPH MS
-position: Ph.D. Candidate
+position: PhD Candidate
 affiliation: UCLA
 email: s.peng@ucla.edu
 
