--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ remote_theme: yaoyao-liu/minimal-light
 # Basic Information 
 title: Sisi Peng, MPH MS
 position: PhD Candidate
-affiliation: UCLA
+affiliation: UCLA Department of Communication
 email: s.peng@ucla.edu
 
 # Links
