--- a/_config.yml
+++ b/_config.yml
@@ -9,3 +9,6 @@ email: s.peng@ucla.edu
 
 # Links
 linkedin: https://www.linkedin.com/in/sisipeng
+
+# Images
+avatar: ./assets/img/Sisi-Headshot.jpg
