--- a/_config.yml
+++ b/_config.yml
@@ -11,4 +11,4 @@ email: s.peng@ucla.edu
 linkedin: https://www.linkedin.com/in/sisipeng
 
 # Images
-avatar: ./assets/img/Sisi-Headshot.jpg
+avatar: /assets/img/Sisi-Headshot.jpg
