--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 remote_theme: yaoyao-liu/minimal-light
 
 # Basic Information 
-title: Sisi Peng, MPH MS
-position: PhD Candidate
+title: Sisi Peng, PhD MPH MS
+position: Research Scientist
 affiliation: UCLA Department of Communication
 email: s.peng@ucla.edu
 
