--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ remote_theme: yaoyao-liu/minimal-light
 title: Sisi Peng, PhD MPH MS
 position: Research Scientist
 affiliation: UCLA Department of Communication
+Past Experience at Maven Clinic, Syneos Health Communications, Gerson Lehrman Group
 email: s.peng@ucla.edu
 
 # Links
