--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ remote_theme: yaoyao-liu/minimal-light
 
 # Basic Information 
 title: Sisi Peng, PhD MS MPH
-position: Social Scientist
+position: Research Scientist
 affiliation: UCLA Department of Communication
 email: s.peng@ucla.edu
 
